# weewx-conditions-api

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
config/: weewx-conditions-api.service
docs/: config (MagicMirror sample).js  test-plan.md  weewxmm.js
tests/: conftest.py
tests/fixtures/: fixture.db
tests/unit/: test_helpers.py  test_mmwo.py  test_owm.py
weewx_conditions_api/: __init__.py  api_server.py  install.py
weewx_conditions_api/config/systemd/: weewx-conditions-api.service
