[metadata]
name = weewx-conditions-api
version = 0.1.0
description = A REST API to expose current weather conditions from WeeWX (using SQLite)
author = eduff0
author_email = example@example.com
license = GPL-3.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.7
packages = find:
install_requires =
    Flask>=2.0,<3.0
    flask-cors>=5.0,<6.0
    configobj>=5.0,<6.0
    ephem>=4.1,<5.0

[options.entry_points]
console_scripts =
    weewx-conditions-api = weewx_conditions_api.api_server:main
